# TutorialForPython

./: .gitignore  README.md  _404.md  _sidebar.md  index.html  package-lock.json  package.json  search_plus_index.json  sitemap.xml  术语表.html  编译与反编译.html
Python的数据模型/: index.html  变量引用与垃圾回收.html  结语.html
book/: README.md  SUMMARY.md  book.json  index.html  package-lock.json  package.json  search_plus_index.json  sitemap.xml  总章.html  总章.md  编译与反编译.md
book/Python的数据模型/: README.md  变量引用与垃圾回收.md  结语.md
book/python性能优化/: Cython的包装模式.md  README.md  什么时候优化python程序.md  用numba为python写高性能C扩展.md
book/人机交互/: GUI.md  使用python编写命令行工具.md  结语.md
book/人机交互篇/: README.md  使用python编写命令行工具.md  自定义交互式界面.md
book/信息安全/: README.md  结语.md
book/元编程/: 导入时与运行时.md  结语.md
book/函数/: 变量作用域与闭包.md
book/国际化/: 国际化文本翻译.md
book/国际化工具/: 时间日期处理.md
book/基础应用篇/: README.md
book/工具链/: 代码风格.md  结语.md  运行环境与部署分发.md
book/工具链篇/: README.md  docstring工具.md  代码风格.md  包的安装管理与分发.md  单元测试.md  性能调优工具.md  日志工具.md  调用追踪与异常栈追踪.md  运行环境.md  部署服务.md  静态类型检测.md
book/数学与统计应用篇/: README.md
book/数学工具与科学计算/: 有理数.md  高精度计算.md
book/数据压缩/: 压缩归档.md  数据压缩解压.md
book/数据结构与算法/: 序列对象.md  结语.md
book/文本_文件与字节序/: 序列化.md  文件与IO流.md  结语.md
book/标准库中的数学工具/: 数学运算模块.md  统计模块.md
book/流程控制/: README.md  单线程同步流程控制.md  多线程与GIL.md  多进程.md  结语.md  阻塞异步与协程.md
book/网络异步编程/: README.md  客户端中间人结构实现发布订阅模式.md  客户端服务器结构实现请求应答模式.md  异步网络编程的组件介绍.md
book/设计模式/: README.md  策略模式.md  结语.md
book/语法篇/: 异常和警告.md
book/配置文件解析/: README.md  ini配置文件解析.md
book/随机数据生成工具/: README.md  伪造信息生成器.md  随机时间生成器.md
book/面向对象惯用法/: README.md  多重继承和Mixin.md
docs/: README.md  _sidebar.md  index.html  package-lock.json  search_index.json  search_plus_index.json  sitemap.xml  总章.html  术语表.html  编译与反编译.html
docs/Python的数据模型/: index.html  变量引用与垃圾回收.html  变量引用与垃圾回收.md  数据模型.html  数据模型.md  结语.html  (+1 more)
ipynbs/: README.md  SUMMARY.md  前言.md  总章.ipynb  编译与反编译.ipynb
python性能优化/: index.html  什么时候优化python程序.html  结语.md
src/工具链篇/examples/setups/full/: setup.cfg
人机交互/: README.md  index.html  使用python编写命令行工具.html  使用python编写命令行工具.md
人机交互篇/: index.html  使用python编写命令行工具.html  结语.html  自定义交互式界面.html
信息安全/: index.html  加密算法.html  加密算法.md  动态口令.html  摘要算法.html  数字签名.html  结语.html  结语.md  随机密码.html
信息安全篇/: index.html  加密算法.html  动态口令.html  摘要算法.html  数字签名.html  结语.html  随机密码.html
元编程/: README.md  元类编程.md  动态属性与特性与描述符.html  动态编译.md  导入时与运行时.html  猴子补丁和热更新.html  装饰器.html  装饰器.md  运算符重载.md
函数/: README.md  函数是一等对象.md
国际化/: index.html  国际化文本翻译.html  国际化文本翻译.md  时间日期处理.html  结语.html  货币处理模块.html
基础应用篇/: README.md  index.html  定时任务.html  定时任务.ipynb  定时任务.md  结构数据验证.html  调用子进程.html  调用子进程.md
嵌入与扩展篇/: index.html  使用f2py用fortain给python写扩展.html  用numba为python写高性能C扩展.html
工具链/: 代码风格.html  代码风格.md  结语.html  调试与测试.md  运行环境与部署分发.html
工具链篇/: README.md  docstring工具.html  docstring工具.ipynb  foo.txt  index.html  rm.py  代码测试.html  代码测试.ipynb  代码风格.html  包的安装与管理.ipynb  包的安装与管理.md  包的安装管理与分发.html  包的打包与分发.ipynb  包的打包与分发.md  性能调优工具.html  日志工具.html  日志工具.ipynb  日志工具.md  结语.html  调用追踪与异常栈追踪.html  调试工具.html  运行环境.html  运行环境.md  部署应用.ipynb  部署应用.md  部署服务.html  静态类型检测.html  静态类型检测.ipynb  静态类型检测.md
工具链篇/examples/setups/namespacepack/: README.md  pyproject.toml
工具链篇/examples/setups/namespacepack/nsa/pa/: __init__.py
工具链篇/examples/setups/namespacepack/nsa/pb/: __init__.py
工具链篇/examples/setups/namespacepack/test/: test_load.py
工具链篇/examples/setups/onlytoml/: pyproject.toml
底层篇/: Cpython的虚拟机和解释器.md  README.md
扩展篇/: Fortain扩展.md  Javascript扩展.md  README.md
技巧篇/: README.md  高级用法.ipynb
技巧篇/使用第三方工具提升运行时性能/通过静态化参数提升模块性能/mymath/: README.md  build.sh  pyproject.toml  setup.py
技巧篇/使用第三方工具提升运行时性能/通过静态化参数提升模块性能/mymath/mymath/: __init__.py  fib.py  version.py
技巧篇/使用第三方工具提升运行时性能/通过静态化参数提升模块性能/mymath/mymath/square_op/: quadratic_sum.py  square.py  square_error.py  square_root.py
技巧篇/使用第三方工具提升运行时性能/通过静态化参数提升模块性能/mymath/wheelhouse/: mymath-0.0.1rc1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  mymath-0.0.1rc1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
接口服务篇/: GRpc接口服务.html  index.html
数学与统计应用篇/: index.html  结语.html  结语.md
数学工具与科学计算/: 复数运算.html  复数运算.md  数学运算模块.html  结语.md  高精度计算.html
数据压缩与归档/: README.md  index.html  压缩归档.html
数据结构与算法/: 映射对象.md
文本_文件与字节序/: 序列化.md  文本和编码.html  正则表达式.html  正则表达式.md
术语表/: index.html
流程控制/: 使用sqlite3共享内存.html  单线程同步流程控制.html  多线程与GIL.html  多线程与GIL.md  多进程.html  并发模型.html  并行编程的惯用法.html
科学计算篇/: index.html
网络异步编程/: index.html  客户端中间人结构实现发布订阅模式.md  客户端服务器结构实现请求应答模式.md
设计模式/: index.html  命令模式.md  策略模式.html
语法篇/: README.md  index.html  异常和警告.html  异常和警告.ipynb  异常和警告.md  结语.html
输入输出/: index.html  数据库读写.html  文件与IO流.html  文件与IO流.md  标准输入输出.html  结语.html
输入输出篇/: index.html  数据库读写.html  文件与IO流.html  标准输入输出.html  结语.html
配置文件解析/: 配置文件解析.md
面向对象惯用法/: python中的对象.md  协议与接口与抽象基类.md  多重继承和Mixin.md  结语.html  自定义序列Vector.html
(+1881 files in other folders)
