[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
authors = [
  {name = "hsz", email = "hsz1273327@mail.com"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "A simple data pack."
dynamic = ["readme"]
keywords = ["data"]
license = {file = "LICENSE"}
name = "nstest"
version = "0.0.1"
requires-python = "~=3.10"

[project.urls]
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
documentation = "https://readthedocs.org"
homepage = "https://example.com"
repository = "https://github.com/me/spam.git"

[tool.setuptools]
platforms = ["all"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}


[tool.setuptools.packages.find]
exclude = ['contrib', 'docs', 'test']
