[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seg"
authors = [
  {name = "hsz", email = "hsz1273327@mail.com"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "A sample Python project for seg chinese txt."
keywords = ["seg", "chinese nlp"]
license = {file = "LICENSE"}
dynamic = ["version", "readme", "dependencies"]
requires-python = "~=3.10"

[project.urls]
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
documentation = "https://readthedocs.org"
homepage = "https://example.com"
repository = "https://github.com/me/spam.git"

[project.optional-dependencies]
all = ["PySimpleGUI>=4.60.4", "coverage"]
gui = ["PySimpleGUI>=4.60.4"]
test = ["coverage"]

[project.scripts]
seg = "seg.cmd:cmdseg"

[project.gui-scripts]
seg-gui = "seg.gui:guiseg"

[tool.setuptools]
platforms = ["all"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "seg.version.__version__"}

[tool.setuptools.packages.find]
exclude = ['contrib', 'docs', 'test']
