[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mymath"
authors = [
  {name = "hsz", email = "hsz1273327@mail.com"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "A sample Python project for test."
keywords = ["math", "test"]
license = {file = "LICENSE"}
dynamic = ["version", "readme", "dependencies"]
requires-python = ">=3.11"

[project.urls]
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
documentation = "https://readthedocs.org"
homepage = "https://example.com"
repository = "https://github.com/me/spam.git"

[tool.setuptools]
platforms = ["all"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "mymath.version.__version__"}

[tool.setuptools.packages.find]
exclude = ['contrib', 'docs', 'test']

[tool.cibuildwheel]
build-frontend = { name = "build", args = ["-n"] }
before-build = "pip install build mypy[mypyc]"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["x86_64"]