[metadata]
name=seg
version = attr: seg.version.__version__
keywords = seg, chinese nlp
classifiers	=
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = A sample Python project for seg chinese txt.
long_description = file: README.md
long_description_content_type = text/markdown
author = hsz
author_email = hsz1273327@mail.com
url = https://github.com/xxxx/sampleproject
download_url = https://github.com/xxxx/sampleproject/releases/tag/v7.1.0
license = MIT License
platforms=["all"]

[options]
packages = find:
python_requires= ~=3.10
install_requires = 
    jieba >= 0.42.1
[options.packages.find]
exclude = 
    contrib
    docs
    test
[options.extras_require]
gui = PySimpleGUI>=4.60.4
test = coverage
all = 
    PySimpleGUI>=4.60.4
    coverage

[options.entry_points]
console_scripts =
    seg = seg.cmd:cmdseg
gui_scripts =
    seg-gui = seg.gui:guiseg
